# gitlab_mr_webhook

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/: config.py  main.py  run.py
src/handlers/: webhook_handler.py
src/tasks/: mr_summary.py
src/utils/: gitlab_api.py  logger.py  markdown.py  queue_handler.py  wechat_bot.py
